<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyApp</string>
    <string name="title_activity_homework">Homework</string>
    <string name="action_settings">Settings</string>
    <string name="name_label">Nome</string>
    <string name="subject">Materia</string>
    <string name="subject_label">Materia</string>
    <string name="description_label">Descrizione</string>
    <string name="expiry_label">Scadenza</string>
    <string name="time_left_label">Tempo rimasto</string>
    <string name="leader_label">Leader</string>
    <string name="task">Task</string>
    <string name="task_label">Task</string>
    <string name="tasks_label">Tasks</string>
    <string name="you">Tu</string>
    <string name="create">Crea</string>
    <string name="homework">Homework</string>
    <string name="date_label">Data</string>
    <string name="time_label">Ora</string>
    <string name="homeworks_title">Homeworks</string>
    <string name="d_day">g</string>
    <string name="day">giorno</string>
    <string name="days">giorni</string>
    <string name="h_hours">h</string>
    <string name="hour">ora</string>
    <string name="hours">ore</string>
    <string name="and">e</string>
    <string name="subjects">Materie</string>
    <string name="lorem_ipsum"> Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Aliquam efficitur nisi sit amet ultricies
        tincidunt. Pellentesque elementum, mauris ut varius viverra,
        leo nisl commodo tellus, vel pulvinar orci orci at risus.
        Maecenas vehicula diam tempor venenatis fringilla.
        Praesent nec diam velit.</string>
    <string name="lorem_ipsum_short"> Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Aliquam efficitur nisi sit amet ultricies
        tincidunt.</string>
    <string name="new_homework">Nuovo Homework</string>
    <string name="new_subject">Nuova Materia</string>
    <string name="_new">Nuovo</string>
    <string name="save">Salva</string>
    <string name="edit">Modifica</string>
    <string name="cancel">Annulla</string>
    <string name="delete_homework">Elimina Homework</string>
    <string name="delete_subject">Elimina Subject</string>
    <string name="select_subject">Scegli una materia..</string>
    <string name="expired">Scaduto</string>
    <string name="color_label">Colore</string>
    <string name="select_color">Scegli un colore..</string>
    <string-array name="tabs_title_array">
        <item>Homework</item>
        <item>Materie</item>
    </string-array>
    <string name="add_task">Aggiungi un task..</string>
    <string name="completion_label">Completamento</string>
    <string name="completed">Completato</string>
    <string name="at_least_one_subject">Impossibile eliminare tutta la lista:
        deve esistere sempre almeno una materia da associare agli Homework!</string>
    <string name="subject_associated_to_homework">Impossibile eliminare le materie
        ancora associate ad uno o più Homework!</string>
    <string name="no_one_homework">Per creare un Homework usa
        il pulsante + in alto a destra!</string>
</resources>
