<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/name_label"
                style="@style/field_label" />
            <EditText
                android:id="@+id/hwork_name"
                android:hint="@string/name_label"
                style="@style/field" />

            <TextView
                android:text="@string/description_label"
                style="@style/field_label" />
            <EditText
                android:id="@+id/hwork_description"
                android:hint="@string/description_label"
                style="@style/field" />

            <TextView
                android:text="@string/subject_label"
                style="@style/field_label" />
            <Spinner
                android:id="@+id/hwork_subject"
                style="@style/field" />

            <TextView
                android:text="@string/expiry_label"
                style="@style/field_label" />
            <Button
                android:id="@+id/hwork_expiry_date"
                android:hint="@string/date_label"
                style="@style/field" />
            <Button
                android:id="@+id/hwork_expiry_time"
                android:hint="@string/time_label"
                style="@style/field" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>