<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.unive.stud838640.studyapp.HomeworkActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label" />
    <EditText android:id="@+id/hwork_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_elements_margin"
        android:text="@string/leader_label" />
    <EditText android:id="@+id/hwork_leader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_elements_margin"
        android:text="@string/subject_label" />
    <Spinner android:id="@+id/hwork_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_elements_margin"
        android:text="@string/description_label" />
    <EditText android:id="@+id/hwork_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_elements_margin"
        android:text="@string/expiry_label" />
    <Button android:id="@+id/hwork_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/date_time_font_size" />

</LinearLayout>
